being processed) to the binding to allow the script to process these data.

Upgrade to using Groovy 1.5.8 instead of 1.5.7 as the Groovy 1.5.x version.

Upgrade to using Groovy 1.6.3 instead of 1.6.0 as the Groovy 1.6.x version.

Amend the way symbolic links are processed in the launch scripts on Mac OS X to correct various faults.


1.6.1 ( r10179 )
----------------

Groovy 1.6.0 is released, declare a Gant bug-fix release so as to avoid any confusion regarding versions of
Gant in the Maven repository and elsewhere.


1.6.0 ( r10161 )
---------------

A first cut at adding BuildListeners added by Graeme Rocher.  cf. GANT-70.

Fix the Posix shell scripts to try and deal with the weirdness of the Mac OS X readlink compared to the one
on Ubuntu, MSYS, Cygwin.  Solaris doesn't have readlink by default, the Sunfreeware version is the same as
the one on Ubuntu, MSYS, Cygwin.

Split the two cases where -2 is the return code, introduce -4 for one of the cases.

Various tinkerings associated with GANT-50, GANT-62, GANT-71.

Upgraded to use Groovy 1.6-RC-2.

Upgraded to use Ivy 2.0.0.


1.5.1 ( r10110 )
----------------

Patch up the startGroovy script to deal with MSYS issues.

Amend the org.codehaus.gant.ant.tests.Gant_Test to ensure things work on Windows as well as Ubuntu, Mac OS X
and Solaris.


1.5.0 ( r10067 )
----------------

Amend property lookup so that Ant properties appear as entries in the Gant binding, i.e. Ant properties are
directly accessible as variables -- no need any more for ant.project.properties.skipTests, can just use
skipTests.  Where there is a name conflict Groovy variables take precedence over Ant properties.

Added nested <definition> tags to the Gant Ant task so as to allow -D... parameters to be specified.

Added nested <gantTarget> tags to the Gant Ant task so as to allow multiple targets to be run.

Correct the Gant Ant task file lookup to use basedir rather than the start directory as the base from which
to search for the file.
